--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,103 @@
+/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: 100%;
+  font-weight: normal;
+}
+
+ul {
+  list-style: none;
+}
+
+button, input, select {
+  margin: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+img, video {
+  height: auto;
+  max-width: 100%;
+}
+
+iframe {
+  border: 0;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td, th {
+  padding: 0;
+}
+
+h1 {
+  font-family: "Shrikhand", cursive, Arial, Helvetica, sans-serif;
+  font-size: 1.9rem;
+}
+
+h2, h3 {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.1rem;
+}
+
+p {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: 200;
+}
+
+li {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
+.logoFont {
+  font-family: "Shrikhand", cursive, Arial, Helvetica, sans-serif;
+}
+
+footer {
+  background-color: #333333;
+  color: white;
+}
+
 body {
-  background: #000;
+  background-color: white;
+}
+
+#citySelection {
+  background-color: white;
+}
+
+#exploreRestaurants {
+  background-color: white;
+}
+
+#siteTutorial {
+  background-color: white;
+}
+
+#restaurantsSelection {
+  background-color: white;
 }/*# sourceMappingURL=main.css.map */
