--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -24,17 +24,13 @@ h3{
     font-size: 1.1rem;
 }
 
-p{
+p, li{
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     font-size: 1rem;
-    font-weight:200;
-}
-
-li{
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-
+    font-weight:300;
 }
 
 .logoFont{
     font-family: 'Shrikhand', cursive, Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
 }
