--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -4,7 +4,7 @@
     @if ( lightness($color) > 50% ) {
         $color: #101010;
     }@else{
-        $color: white
+        $color: white;
     }
         color: $color;
 }
