--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -5,7 +5,7 @@ $colorSecondary:  #FF79DA;
 $colorTertiary:  #99E2D0;
 
 //Principal Background color
-$bgColor:white;
+$bgColor:rgb(255, 255, 255);
 
 //Section Background color
 $bgColor-header:$bgColor;
