--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,7 @@
 @import "./utils/functions";
 @import "./utils/mixins";
 @import "./utils/placeholders";
-@import "./utils/placeholders";
+@import "./utils/helperClass";
 @import "./base/fonts";
 @import "./components/buttons";
 @import "./layouts/header";
