--- a/scss/utils/_placeholders.scss
+++ b/scss/utils/_placeholders.scss
@@ -3,3 +3,8 @@
     justify-content: center;
     align-items: center;
 }
+
+%basicHover{
+    transform: scale(1.3);
+    color: $colorTertiary;
+}
