--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -6,31 +6,39 @@
 //Associations par défaut des polices
 
 
-h1{
+h1, .logoFont{
     font-family: 'Shrikhand', cursive, Arial, Helvetica, sans-serif;
-    font-size: 1.9rem;
+    font-weight: initial;
 }
 
-h2, h3{
+h2, h3, p, li {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    font-weight:bold ;
+}
+
+h1{
+    font-size: 1.9rem;
 }
 
 h2 {
     font-size: 1.5rem;
+    font-weight:bold;
 }
 
 h3{
     font-size: 1.1rem;
+    font-weight:bold;
 }
 
-p, li{
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+p{
+    font-size: 1.1rem;
+    font-weight:200;
+}
+
+li{
     font-size: 1rem;
     font-weight:300;
 }
 
 .logoFont{
-    font-family: 'Shrikhand', cursive, Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
 }
