--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,8 +1,8 @@
 .mySite{
-    @extend %flex_CC;
+    @include flexCol ("cen","cen");
+    @include bg_textColor($colorAdd_main);
     position: relative;
     width: 100%;
-    @include bg_textColor($colorAdd_main);
     &__title{
         margin: 0.6rem;
     }
@@ -17,10 +17,10 @@
     &::after{
         content: '';
         position: absolute;
-        bottom: -0.6rem;
+        bottom: -0.3rem;
         left: 0;
         width: 100%;
-        height: 0.6rem;
+        height: 0.3rem;
         background: linear-gradient(darken($colorAdd_dark, 15%), $colorAdd_dark); 
     }
 }
