--- a/scss/utils/_placeholders.scss
+++ b/scss/utils/_placeholders.scss
@@ -1,10 +1,12 @@
-%flex_CC{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 %basicHover{
     transform: scale(1.3);
     color: $colorTertiary;
+}
+
+%buttonShadow{
+    box-shadow: 0 0.3rem 0.5rem rgba($colorAdd_darkest, 0.2);
+    &:hover{
+        box-shadow: 0 0.4rem 0.5rem rgba($colorAdd_darkest, 0.3);
+    }
 }
