--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./utils/helperClass";
 @import "./base/fonts";
 @import "./components/buttons";
+@import "./components/cards";
 @import "./layouts/header";
 @import "./layouts/footer";
 @import "./pages/index";
