Ajout de la card restaurant

--- a/css/main.css
+++ b/css/main.css
@@ -415,4 +415,5 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  background: #000;
 }/*# sourceMappingURL=main.css.map */
