--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -35,7 +35,7 @@ body{
     @include bg_textColor($colorAdd_light);
     width: 100%;
     height: 280px;
-    
+     
     &__title{
         width: 64%;
         text-align: center;
@@ -45,6 +45,7 @@ body{
         text-align: center;
     }
 }
+
 
 .tutorial{
     @include flexCol ("spE","flexS");
@@ -67,6 +68,8 @@ body{
     &__selection{
         @include flexCol ("cen", "cen");  //! A modifier flex-wrap
         flex-wrap: wrap;
+        //A supprimer pb GITtoken
+        background: #000;
     }
     
 
