--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -27,10 +27,19 @@
         width: 100%;
         height: 75px;
         margin: 0.5rem 0;
+        
         font-size: 1rem;
         position: relative;
         @include bg_textColor ($colorAdd_light);
         @include flexRow (initial, "cen");
+
+        @include mobile-limit{
+            width: 70%;
+        }
+        @include tablet-limit{
+            width: 28%;
+            padding-right: 0.5rem;
+        }
         i {
             margin:0 1.5rem 0 2rem;
             color: darken($colorAdd_dark,40%);
@@ -68,7 +77,7 @@
 .icon__heart{
     width: 25px;
     height: 25px;
-
+    
     &--firstColor{
         stop-color: $colorPrimary;
     }
@@ -93,7 +102,7 @@
     &:hover{
         cursor: pointer;
         path{
-            animation: bump-heart 0.5s ease-in-out infinite;
+            animation: bump-heart 0.9s ease-in-out infinite;
         }
     }  
 }
