--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,17 +1,34 @@
 .cardRestaurant{
 
-    width: 336px;
+    width: 90%;
+    max-width: 400px;
     height: 252px;
-    margin: 1rem;
+    margin: 0.6rem;
     border-radius: 0.9rem;
     overflow: hidden;
     position: relative;
-
+  
     @include bg_textColor($colorAdd_main);
     @include flexCol(initial,"flexS");
 
     @extend %buttonShadow;
 
+    @include tablet-limit{
+        width: 40%;
+    }
+
+    @include desktop-limit{
+        width: 20%;
+    }
+
+    &:hover{
+        transform: translate(0,-0.3rem) scale(1.05);
+    }
+    &:active{
+        transform: translate(0, 0rem);
+        box-shadow: none;
+    }
+    
     &--new {
         &::before{
             content: "Nouveau";
@@ -26,7 +43,7 @@
             font-weight: 500;
 
             @include flexCol("cen","cen");
-            border-radius: 0.1rem;
+            border-radius: 0.15rem;
             background-color: $colorTertiary;
             color: darken($colorTertiary,40%);
         }
